fix: 修正 Excel 格式排版以復刻範本結構 (P1-P6)
P1: 115總/總累 表頭改為3層合併結構
    - 火險/水險/航空獨立跨3行
    - 汽車險(G:K)、意外險(L:O)分組合併
    - 強制責任險(I:K)子合併
    - 國外分進欄固定顯示 (含/排除由config控制合計)
    - 22欄固定結構 (A-V)

P2: 比較增減率改為3層表頭
    - 汽車險(E:I)、意外險(J:M)分組合併
    - 車體損/任意責任/強制責任三層展開
    - 強制責任下分汽車/機車/電動二輪車

P3: 險種短名加入換行符
    - 0100-0400 火險4個、3000-3100 健康2個
    - 3200 電動二輪、9900 國外分進

P4: 歸屬改為5欄結構
    - 類(一~九)/歸屬/代號/子分組/險種全名
    - 新增 CODE_TO_FULL_NAME、MAJOR_CATEGORY_NUMBER、CODE_TO_SUB_GROUP

P5: 增減原因標題+結構調整
    - 標題改為「{Y}年與{Y-1}年...保費收入、成長率及其增減原因分析如后：」
    - 結構改為 A:B合併險種/C月份/D成長率/E增減原因
    - A欄大類合併、B欄子類合併

P6: 排名簡化結構
    - 移除標題行和排名序號欄
    - 僅保留 公司/金額 兩欄

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>